# nanoembed

./: .gitignore  README.md  download_miracl.py  requirements.txt  run_compress.py  run_eval_miracl.py  run_eval_mteb.py
compress/: __init__.py  cluster.py  config.py  export.py  importer.py  lloyd_max.py  pca.py  pq.py  quantize.py  recipes.py  runner.py
evaluate/: __init__.py  encoders.py  metrics.py  miracl.py  mteb_adapter.py  results.py
models/: __init__.py  io.py  model.py
nanoembed/: README.md  __init__.py  checkpoint.py  model.py  packing.py  pyproject.toml
nanoembed/tests/: test_checkpoint.py  test_model.py  test_packing.py
