[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nanoembed"
version = "0.1.0"
description = "Tiny quantized static embeddings. Load a model, encode text, get vectors."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "tokenizers>=0.15",
]

[project.optional-dependencies]
hf = ["huggingface_hub>=0.20"]

[project.urls]
Repository = "https://github.com/nebius/nanoembed"

[tool.hatch.build.targets.wheel]
packages = ["."]
